--- a/Dockerfile.amd64
+++ b/Dockerfile.amd64
@@ -83,9 +83,9 @@ RUN apt-get update \
 ################################################################################
 RUN apt-get update
 RUN apt-get install -y --no-install-recommends g++ libc6-dev make cmake qtbase5-dev qtbase5-private-dev qtbase5-dev-tools qttools5-dev \
-    && qttools5-dev-tools qtdeclarative5-dev qtquickcontrols2-5-dev libfakekey-dev xorg-dev libxtst-dev \
-    && libjpeg-dev zlib1g-dev libssl-dev libpam0g-dev libprocps-dev liblzo2-dev libqca-qt5-2-dev \ 
-    && libldap2-dev libsasl2-dev libkf5itemmodels-dev git
+       qttools5-dev-tools qtdeclarative5-dev qtquickcontrols2-5-dev libfakekey-dev xorg-dev libxtst-dev \
+       libjpeg-dev zlib1g-dev libssl-dev libpam0g-dev libprocps-dev liblzo2-dev libqca-qt5-2-dev \ 
+       libldap2-dev libsasl2-dev libkf5itemmodels-dev git
 RUN git clone --recursive https://github.com/veyon/veyon.git \
     && cd veyon \
     && mkdir build \
@@ -103,8 +103,8 @@ RUN cd \
     && ./setup.sh \
     && inv install -l
 RUN apt-get install -y --no-install-recommends bash bridge-utils ebtables iproute2 iputils-ping quagga quagga-doc openssh-server \
-    && isc-dhcp-server isc-dhcp-client vsftpd apache2 tcpdump radvd at ucarp openvpn traceroute mgen wireshark iperf3 tshark snmpd \
-    && snmptrapd openssh-client
+       isc-dhcp-server isc-dhcp-client vsftpd apache2 tcpdump radvd at ucarp openvpn traceroute mgen wireshark iperf3 tshark snmpd \
+       snmptrapd openssh-client
 
 
 ################################################################################
