--- a/Dockerfile.amd64
+++ b/Dockerfile.amd64
@@ -102,6 +102,9 @@ RUN cd \
     && cd core \
     && ./setup.sh \
     && inv install -l
+RUN pip3 install --upgrade pip \
+    && pip3 install poetry \
+    && pip3 install invoke
 RUN apt-get install -y --no-install-recommends bash bridge-utils ebtables iproute2 iputils-ping quagga quagga-doc openssh-server \
        isc-dhcp-server isc-dhcp-client vsftpd apache2 tcpdump radvd at ucarp openvpn traceroute mgen wireshark iperf3 tshark snmpd \
        snmptrapd openssh-client
