--- a/Dockerfile.amd64
+++ b/Dockerfile.amd64
@@ -96,15 +96,15 @@ RUN git clone --recursive https://github.com/veyon/veyon.git \
 RUN apt-get install -y --no-install-recommends npm
 RUN npm install -g --unsafe-perm node-red
 
-RUN pip3 install --upgrade pip
+RUN pip install --upgrade pip
 RUN cd \
     && git clone https://github.com/coreemu/core.git \
     && cd core \
     && ./setup.sh \
     && inv install -l
-RUN pip3 install --upgrade pip \
-    && pip3 install poetry \
-    && pip3 install invoke
+RUN pip install --upgrade pip \
+    && pip install poetry \
+    && pip install invoke
 RUN apt-get install -y --no-install-recommends bash bridge-utils ebtables iproute2 iputils-ping quagga quagga-doc openssh-server \
        isc-dhcp-server isc-dhcp-client vsftpd apache2 tcpdump radvd at ucarp openvpn traceroute mgen wireshark iperf3 tshark snmpd \
        snmptrapd openssh-client
