--- a/Dockerfile.amd64
+++ b/Dockerfile.amd64
@@ -100,8 +100,8 @@ RUN pip3 install --upgrade pip
 RUN cd \
     && git clone https://github.com/coreemu/core.git \
     && cd core \
-    && ./setup.sh \
-    && inv install -l
+    && ./setup.sh
+RUN inv install -l
 #RUN pip install --upgrade pip \
 #    && pip install poetry \
 #    && pip install invoke
