--- a/Dockerfile.amd64
+++ b/Dockerfile.amd64
@@ -103,7 +103,7 @@ RUN cd \
     && ./setup.sh
 RUN cd \
     && cd core \
-    && inv install -l
+CMD inv install -l
 #RUN pip install --upgrade pip \
 #    && pip install poetry \
 #    && pip install invoke
