--- a/Dockerfile.amd64
+++ b/Dockerfile.amd64
@@ -103,7 +103,9 @@ RUN cd \
     && ./setup.sh
 RUN cd \
     && cd core \
-CMD inv install -l
+ENV PATH="$PATH"
+
+RUN inv install -l
 #RUN pip install --upgrade pip \
 #    && pip install poetry \
 #    && pip install invoke
