--- a/Dockerfile.amd64
+++ b/Dockerfile.amd64
@@ -101,10 +101,10 @@ RUN cd \
     && git clone https://github.com/coreemu/core.git \
     && cd core \
     && ./setup.sh
+
+RUN bash -c "source ${HOME}/.bashrc" 
 RUN cd \
     && cd core \
-ENV PATH="$PATH"
-
 RUN inv install -l
 #RUN pip install --upgrade pip \
 #    && pip install poetry \
