--- a/Dockerfile.amd64
+++ b/Dockerfile.amd64
@@ -102,10 +102,12 @@ RUN cd \
     && cd core \
     && ./setup.sh
 
-RUN bash -c "source ${HOME}/.bashrc" 
-RUN cd \
+#RUN bash -c "source ${HOME}/.bashrc" 
+RUN PATH="$PATH" \
+    && exec bash \
+    && cd \
     && cd core \
-RUN inv install -l
+    && inv install -l
 #RUN pip install --upgrade pip \
 #    && pip install poetry \
 #    && pip install invoke
