--- a/Dockerfile.amd64
+++ b/Dockerfile.amd64
@@ -85,7 +85,7 @@ RUN apt-get update
 RUN apt-get install -y --no-install-recommends g++ libc6-dev make cmake qtbase5-dev qtbase5-private-dev qtbase5-dev-tools qttools5-dev \
        qttools5-dev-tools qtdeclarative5-dev qtquickcontrols2-5-dev libfakekey-dev xorg-dev libxtst-dev \
        libjpeg-dev zlib1g-dev libssl-dev libpam0g-dev libprocps-dev liblzo2-dev libqca-qt5-2-dev \ 
-       libldap2-dev libsasl2-dev libkf5itemmodels-dev git
+       libldap2-dev libsasl2-dev libkf5itemmodels-dev git libqca-qt5-2-plugins
 RUN git clone --recursive https://github.com/veyon/veyon.git \
     && cd veyon \
     && mkdir build \
@@ -102,9 +102,9 @@ RUN cd \
     && cd core \
     && ./setup.sh
 
-#RUN bash -c "source ${HOME}/.bashrc" 
-RUN PATH="$PATH" \
-    && exec bash \
+RUN bash -c "source ${HOME}/.bashrc" \
+#RUN PATH="$PATH" \
+#    && exec bash \
     && cd \
     && cd core \
     && inv install -l
